# bsdfan-rs

./: Cargo.toml  LICENSE  Makefile  README.md  bsdfan.conf  bsdfan.toml  build.rs
.cargo/: config.toml
rc.d/: bsdfan
src/: config.rs  controller.rs  level.rs  lib.rs  main.rs  parser.rs
