[package]
name = "bsdfan"
version = "0.1.0"
authors = ["p0l1t1c1an <boicken19@gmail.com>"]
edition = "2018"
repository = "https://github.com/p0l1t1c1an/bsdfan-rust"
readme="README.md"

[dependencies]
libc = "0.2"
signal-hook = "0.1.16"

[[bin]]
name = "bsdfan"
path = "src/main.rs"

[lib]
name = "bsdfan"
path = "src/lib.rs"
