[package]
name = "bsdfan-rs"
version = "0.2.0"
authors = ["p0l1t1c1an <boicken19@gmail.com>"]
edition = "2018"
repository = "https://github.com/p0l1t1c1an/bsdfan-rs"
readme="README.md"

[dependencies]
sysctl = "0.4"
signal-hook = "0.3"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[[bin]]
name = "bsdfan"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true

